# cpp-signal

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cpp-signal-config.cmake.in
include/: cpp-signal-async.h  cpp-signal-base.h  cpp-signal-locking.h  cpp-signal-util.h  cpp-signal.h
src/test/: CMakeLists.txt  aggregation.cpp  async.cpp  class.cpp  copy.cpp  global.cpp  lambda.cpp  main.cpp  signal.cpp  signal_chain.cpp  slot_tracker.cpp
