CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

set(PROJECT_NAME cpp-signal)
project(${PROJECT_NAME})

set(${PROJECT_NAME}_MAJOR_VERSION 0)
set(${PROJECT_NAME}_MINOR_VERSION 1)
set(${PROJECT_NAME}_PATCH_VERSION 0)
set(${PROJECT_NAME}_VERSION
    ${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION}.${${PROJECT_NAME}_PATCH_VERSION})

enable_testing()

set(INCLUDE_DIRS "include")

include_directories(${INCLUDE_DIRS})

set(HEADERS ${PROJECT_SOURCE_DIR}/${INCLUDE_DIRS}/${PROJECT_NAME}.h
            ${PROJECT_SOURCE_DIR}/${INCLUDE_DIRS}/${PROJECT_NAME}-async.h)

add_subdirectory(src)